# bmbp_rbac

./: Cargo.toml  README.md  build_scss.sh  build_tsx.sh
crates/bmbp_rbac/: Cargo.toml
crates/bmbp_rbac/src/: lib.rs
crates/bmbp_rbac_api/: Cargo.toml
crates/bmbp_rbac_ui/: Cargo.toml  build.sh
crates/bmbp_rbac_ui/src/: ctx.rs  init.rs  lib.rs
crates/bmbp_rbac_ui/src/view/: mod.rs
crates/bmbp_rbac_ui/web/jsx/app/: index.jsx
crates/bmbp_rbac_ui/web/jsx/menu/: index.jsx
crates/bmbp_rbac_ui/web/jsx/organ/: index.jsx
crates/bmbp_rbac_ui/web/jsx/role_data/: index.jsx
crates/bmbp_rbac_ui/web/jsx/role_res/: index.jsx
crates/bmbp_rbac_ui/web/jsx/user/: index.jsx
crates/bmbp_rbac_ui/web/static/js/app/: index.js
crates/bmbp_rbac_ui/web/static/js/menu/: index.js
crates/bmbp_rbac_ui/web/static/js/organ/: index.js
crates/bmbp_rbac_ui/web/static/js/role_data/: index.js
crates/bmbp_rbac_ui/web/static/js/role_res/: index.js
crates/bmbp_rbac_ui/web/static/js/user/: index.js
crates/bmbp_rbac_ui/web/tmplate/: app.html  menu.html  organ.html  role_data.html  role_res.html  user.html
crates/demo/: Cargo.toml
crates/demo/src/: main.rs
src/: ctx.rs  init.rs  lib.rs  view.rs
src/action/: mod.rs
src/action/app/: action.rs  bean.rs  service.rs
src/action/app_group/: action.rs  bean.rs  service.rs
src/action/menu/: action.rs  bean.rs  service.rs
src/action/organ/: action.rs  bean.rs  service.rs
src/action/role/: action.rs  bean.rs  mod.rs  service.rs
src/action/user/: action.rs  bean.rs  service.rs
src/app_group/: action.rs  bean.rs  mod.rs  service.rs
src/role/: action.rs
src/view/: mod.rs
static/bmbp_rbac/js/app/: index.js
static/bmbp_rbac/js/app_group/: index.js
static/bmbp_rbac/js/app_menu/: index.js
static/bmbp_rbac/js/bmbp_rbac/app/: index.js
static/bmbp_rbac/js/bmbp_rbac/app_group/: index.js
static/bmbp_rbac/js/bmbp_rbac/app_menu/: index.js
static/bmbp_rbac/js/bmbp_rbac/organ/: index.js
static/bmbp_rbac/js/bmbp_rbac/role/: index.js
static/bmbp_rbac/js/organ/: index.js
static/bmbp_rbac/js/role/: index.js
web/static/js/app/: index.js
web/static/js/app_group/: index.js
web/static/js/menu/: index.js
web/static/js/organ/: index.js
web/static/js/role/: index.js
web/static/js/user/: index.js
web/template/: app.html  app_group.html  menu.html  organ.html  role.html  user.html
web/templates/: app.html  app_group.html  app_menu.html  organ.html  role.html  user.html
web/tsx/app/: action.tsx  grid.tsx  group_tree.tsx  index.tsx
web/tsx/app/form/: dialog.tsx
web/tsx/app_group/: action.tsx  dialog.tsx  form.tsx  grid.tsx  index.tsx  tree.tsx
web/tsx/app_group/form/: dialog.tsx  form.tsx
web/tsx/app_menu/: index.tsx
web/tsx/menu/: action.tsx  index.tsx
web/tsx/menu/form/: dialog.tsx  form.tsx
web/tsx/organ/: action.tsx  index.tsx
web/tsx/organ/form/: dialog.tsx  form.tsx
web/tsx/role/: action.tsx  index.tsx
web/tsx/role/form/: dialog.tsx  form.tsx
web/tsx/user/: action.tsx  index.tsx  user.tsx
web/tsx/user/form/: dialog.tsx  form.tsx
