[package]
name = "bmbp_rbac"
version = "0.0.1"
edition = "2021"
authors = ["bmbp<rs_bmbp.163.com>"]
description = "BMBP HOME"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/bmbper/bmbp_rbac"
repository = "https://github.com/bmbper/bmbp_rbac"
documentation = "https://github.com/bmbper/bmbp_rbac"
[dependencies]
# 宏
bmbp_marco = "0.0.13"
bmbp_util = "0.0.6"
bmbp_app_util = "0.0.2"
# 静态资源
bmbp_lib_ui = "0.1.6"
# 认证信息
bmbp_auth = "0.0.2"
# 全局参数
bmbp_ctx_vars = "0.1.1"
# http返回状态
bmbp_http_type = "0.0.6"
# 数据库类型
bmbp_rdbc = "0.2.8"
# curd
bmbp_curd = "0.0.1"

rust-embed = "8.5.0"
salvo = { version = "0.71.1", features = [
    "default",
    "serve-static",
    "cors",
    "size-limiter",
    "logging",
] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.10"
serde_repr = "0.1.19"
tokio = { version = "1.38.0", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tera = "1.20.0"
once_cell = "1.19.0"
async_static = "0.1.3"