[package]
name = "bmbp_rbac"
version = "0.0.1"
edition = "2021"
authors = ["bmbp<rs_bmbp.163.com>"]
description = "BMBP HOME"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/bmbper/bmbp_rbac"
repository = "https://github.com/bmbper/bmbp_rbac"
documentation = "https://github.com/bmbper/bmbp_rbac"
[dependencies]
bmbp_bean = { workspace = true }
bmbp_vars = { workspace = true }
bmbp_util = { workspace = true }
bmbp_abc = { workspace = true }
bmbp_sql = { workspace = true }
bmbp_orm = { workspace = true }
salvo = { workspace = true }
bmbp_orm_marco = { workspace = true }

tera = { workspace = true }
rust-embed = "8.5.0"
chrono = "0.4.38"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = { version = "1.0.132", features = ["default"] }
tokio-postgres = "0.7.12"