[package]
name = "bmbp_rbac_ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
rust-embed ={workspace = true}
salvo = {workspace = true}
bmbp_ctx_vars={workspace = true}
tera = {workspace=true}
